--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,13 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ../bin.dbg)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/bin.rel)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}/bin.relwithdbg)
 
-project(.)
+project(zhukov_pavel)
 
 include_directories(
+	memory_manager
 	list
 	thirdparty
 )
 
 add_subdirectory(list)
+add_subdirectory(memory_manager)
